Changing language to "en" after deleting/deactivating current language, minor fixes.

--- a/SportHub/public/locales/en/translation.json
+++ b/SportHub/public/locales/en/translation.json
@@ -13,10 +13,10 @@
             "Banners": "Banners",
             "Languages": "Languages",
             "Shares": "Shares",
-            "My users": "My users",
+            "MyUsers": "My users",
             "IA": "IA",
             "Teams": "Teams",
-            "News partners": "News partners",
+            "NewsPartners": "News partners",
             "Advertising": "Advertising"
         },
         "LanguagesManagement": {
