--- a/SportHub/public/locales/ua/translation.json
+++ b/SportHub/public/locales/ua/translation.json
@@ -13,10 +13,10 @@
             "Banners": "Банери",
             "Languages": "Мови",
             "Shares": "Акції",
-            "My users": "Мої користувачі",
+            "MyUsers": "Мої користувачі",
             "IA": "IA",
             "Teams": "Команди",
-            "News partners": "Новинні партнери",
+            "NewsPartners": "Новинні партнери",
             "Advertising": "Реклама"
         },
         "LanguagesManagement": {
