Minor fixes, formatting

--- a/SportHub/public/locales/en/translation.json
+++ b/SportHub/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "Header": {
-        "NotLoginedHeader": {
+        "UserHeader": {
             "LoginBtn": "Login",
             "SignUpBtn": "Sign up",
             "ShareCaption": "Share",
