--- a/SportHub/public/locales/en/translation.json
+++ b/SportHub/public/locales/en/translation.json
@@ -51,6 +51,7 @@
     },
     "AdminPage": {
         "VerticalAdminMenu": {
+            "Home": "Home",
             "Surveys": "Surveys",
             "Banners": "Banners",
             "Languages": "Languages",
@@ -95,6 +96,26 @@
                 "DeleteBtn": "Delete"
             }
         },
+        "ArticleMenu": {
+            "CancelBtn": "Cancel",
+            "SaveBtn": "Save",
+            "PageLanguages": "Page Languages",
+            "ImageLabel": "Image*",
+            "ImagePlaceholderPart1": "+Add picture or drop it right here",
+            "ImagePlaceholderPart2": "You can add next formats: .png .jpg .jpeg .tif",
+            "SubCategoryLabel": "SUBCATEGORY",
+            "TeamLabel": "TEAM",
+            "LocationLabel": "LOCATION",
+            "AltLabel": "ALT.*",
+            "AltPlaceholder": "Alternative text for picture",
+            "HeadlineLabel": "ARTICLE HEADLINE*",
+            "HeadlinePlaceholder": "Name",
+            "CaptionLabel": "CAPTION*",
+            "CaptionPlaceholder": "Write caption here",
+            "ContentLabel": "CONTENT*",
+            "ContentPlaceholder": "Please add text here",
+            "ShowComments": "SHOW COMMENTS"
+        },
         "ArticleMenuCancel": {
             "PopUpRemovalWarning": {
                 "Title": "You are about to discard the changes!",
@@ -111,6 +132,66 @@
                 "AreYouSure": "",
                 "DeleteBtn": "Ok, got it"
             }
+        },
+        "MyUsers": {
+            "Users": "USERS",
+            "Admins": "ADMINS",
+            "SearchPlaceholder": "Type a user name here",
+            "Name": "NAME",
+            "Status": "STATUS",
+            "Action": "ACTION",
+            "Active": "Active",
+            "Blocked": "Blocked",
+            "Disabled": "Disabled",
+            "Block": "Block",
+            "Activate": "Activate",
+            "NoUsersFound": "No users found.",
+            "GeneralInfo": "General Info"
+        },
+        "HomeSection": {
+            "CancelBtn": "Cancel",
+            "SaveBtn": "Save changes",
+            "flashMsg": {
+                "Success": {
+                    "Title": "Changes saved",
+                    "Content": "All successfully saved."
+                },
+                "Error": {
+                    "Title": "Changes are not saved",
+                    "ContentShowHide": "Nothing saved."
+                }
+            },
+            "MainArticlesConfigurator": {
+                "MainArticles": "MAIN ARTICLES",
+                "AddMainArticle": "+ Add main article"
+            },
+            "BreakdownsConfigurator": {
+                "Breakdowns": "BREAKDOWNS",
+                "AddBreakdown": "+ Add breakdown"
+            },
+            "CategoryLabel": "CATEGORY*",
+            "SubCategoryLabel": "SUBCATEGORY",
+            "TeamLabel": "TEAM",
+            "ArticleLabel": "ARTICLE*",
+            "DeleteBtn": "Delete",
+            "AddArticleBtn": "+ Add one more article",
+            "AddBreakdownBtn": "+ Add one more breakdown"
         }
+    },
+    "Footer": {
+        "Newsletter": "NEWSLETTER",
+        "SignUpAgitation": "Sign up to recive the latest sports news",
+        "EmailPlaceholder": "Your email address",
+        "Subscribe": "Subscribe",
+        "Contributions": "CONTRIBUTIONS",
+        "FeaturedWritersProgram": "Featured Writers Program",
+        "FeaturedTeamWritersProgram": "Featured Team Writers Program",
+        "InternshipProgram": "Internship Program",
+        "CompanyInfo": "COMPANY INFO",
+        "About": "About Sports Hub",
+        "News": "News / In the Press",
+        "Advertising": "Advertising / Sports Blogger Ad Network",
+        "Events": "Events",
+        "ContactUs": "Contact Us"
     }
 }
