Added redirects in profile sidebar and translation for it + fixed changing slider on changing language

--- a/SportHub/public/locales/en/translation.json
+++ b/SportHub/public/locales/en/translation.json
@@ -193,5 +193,11 @@
         "Advertising": "Advertising / Sports Blogger Ad Network",
         "Events": "Events",
         "ContactUs": "Contact Us"
+    },
+    "ProfileSidebar": {
+        "ViewProfile": "VIEW PROFILE",
+        "Personal": "Personal",
+        "ChangePassword": "Change password",
+        "LogOut": "Log out"
     }
 }
